--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,19 @@ body {
 a {
     text-decoration: none;
 }
+
+input[type=text] {
+    opacity: 1;
+}
+input[type=text]:-moz-placeholder {
+    opacity: 1;
+}
+input[type=text]::-moz-placeholder {
+    opacity: 1;
+}
+input[type=text]:-ms-input-placeholder {
+    opacity: 1;
+}
+input[type=text]::-webkit-input-placeholder {
+    opacity: 1;
+}
