--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,9 @@
 @import url("../fonts/segoeUI.css");
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', sans-serif;
-    /* background-color: #0f0e11;
-    color: #efeef1; */
 }
 
 body {
@@ -19,7 +16,38 @@ a {
     text-decoration: none;
 }
 
-ul,li {
+a.linkWithIcon {
+    display: flex;
+    flex-direction: row;
+}
+
+a.linkWithIcon p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    text-decoration-line: underline;
+    color: #1A1A1A;
+    padding-left: 4px;
+}
+
+ul, li {
     display: flex;
     flex-direction: column;
+}
+
+.separatorLineInBox {
+    border-bottom: 1px solid rgba(49, 94, 169, 0.32);
+}
+
+.shadowCard {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
+}
+
+.shadowNavBox {
+    background: #FFFFFF;
+    box-shadow: inset 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    margin-top: 16px;
 }
