[Basic] - Criar o componente Breadcrumb

--- a/css/icons.css
+++ b/css/icons.css
@@ -1,39 +1,39 @@
+i {
+    line-height: 0;
+}
+
 .userIcon {
     content: url("../assets/user.svg");
-    line-height: 0;
 }
 
 .passwordIcon {
     content: url("../assets/lock.svg");
-    line-height: 0;
 }
 
 .configIcon {
     content: url("../assets/config.svg");
-    line-height: 0;
 }
 
 .helpIcon {
     content: url("../assets/help.svg");
-    line-height: 0;
 }
 
 .showSidebarIcon {
     content: url("../assets/show_arrow.svg");
-    line-height: 0;
 }
 
 .logoutIcon {
     content: url("../assets/logout.svg");
-    line-height: 0;
 }
 
 .burguerIcon {
     content: url("../assets/burguer.svg");
-    line-height: 0;
 }
 
 .userMenuIcon {
     content: url("../assets/userMenu.svg");
-    line-height: 0;
+}
+
+.homeIcon {
+    content: url("../assets/home.svg");
 }
