--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     font-size: 18px;
     background: #EBEBEB;
     color: #202020;
+    display: flex;
 }
 
 a {
@@ -43,6 +44,12 @@ ul, li {
 .shadowCard {
     background: #FFFFFF;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
+}
+
+.shadowCardRounded {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
 }
 
 .shadowNavBox {
