--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -31,7 +31,7 @@ div.dashboardList article h1 {
     align-items: center;
     text-align: center;
     color: #202020;
-    margin: 24px 0;
+    margin: 12px 0 24px;
 }
 
 div.dashboardList article ul.cards {
@@ -85,6 +85,17 @@ i.boxWhiteGradientDown {
     position: absolute;
     bottom: 0;
     border-radius: 0px 0px 8px 8px;
+}
+
+div.dashboardDetails {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+div.dashboardDetails article {
+    width: 100%;
+    height: 100%;
 }
 
 @media only screen and (max-width:720px) {
