--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,15 +1,22 @@
-body {
-    height: 100vh;
+#App {
+    display: flex;
+    flex-direction: row;
+    height: initial;
+}
+
+#DashboardListContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
 }
 
 div.dashboardList {
     padding: 32px 16px;
     position: relative;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
-    background-color: #FFFFFF;
+    max-height: 88%;
 }
 
 div.dashboardList article {
@@ -18,7 +25,6 @@ div.dashboardList article {
     align-items: center;
     margin: 0 16px;
     width: 100%;
-    height: 100%;
     padding: 24px;
 }
 
@@ -36,7 +42,6 @@ div.dashboardList article h1 {
 
 div.dashboardList article ul.cards {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 4px;
@@ -101,5 +106,11 @@ div.dashboardDetails article {
 @media only screen and (max-width:720px) {
     div.dashboardList {
         flex-wrap: wrap;
+    }
+    div.dashboardList article+article {
+        margin: 24px 16px;
+    }
+    #DashboardListContainer {
+        max-height: inherit;
     }
 }
