--- a/src/styles/headerGreetings.css
+++ b/src/styles/headerGreetings.css
@@ -1,6 +1,7 @@
 header.greetings {
     width: 100%;
-    height: 72px;
+    min-height: 72px;
+    max-height: 72px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -8,6 +9,7 @@ header.greetings {
     padding: 0 32px;
     flex-wrap: nowrap;
     position: relative;
+    flex-grow: 1;
 }
 
 header.greetings h1 {
