--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,4 +1,9 @@
 #App {
+    width: 100%;
+    
+}
+
+#LoginPage {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,6 +11,8 @@
     height: 100vh;
     justify-content: space-around;
     transition: .2s;
+    background: #EBEBEB;
+    color: #202020;
 }
 
 #loginBox {
@@ -45,7 +52,6 @@
 #loginBox form div.input:focus-within {
     opacity: 1;
 }
-
 
 #loginBox form div.input input {
     width: 100%;
@@ -137,7 +143,7 @@
 }
 
 @media only screen and (max-height:480px) {
-    body {
+    #LoginPage {
         background: #FFFFFF;
         justify-content: flex-start;
         transition: .2s;
