--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -96,6 +96,7 @@ div.dashboardDetails {
     width: 100%;
     height: 100%;
     display: flex;
+    padding: 0 24px 0;
 }
 
 div.dashboardDetails article {
